--- a/README.adoc
+++ b/README.adoc
@@ -9,8 +9,7 @@ Remember to chmod +x *.sh on these scripts to make them executable.
 ## downloadtile.sh
 
 This script downloads products from PivNet. Your PivNet token is found on network.pivotal.io in your profile. It is the API TOKEN located at the bottom of the Edit Profile page.
-
-image::pivnet-profile.png[]
+image::pivtnet-profile.png[]
 
 The first parameter is your PivNet token
 The second paramter is the name of the downloaded file. I usually use the Filename posted for the release (see image below)
